Closed
Bug 1703930
Opened 5 years ago
Closed 5 years ago
Native menus don't send DOMMenuItemInactive events
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
VERIFIED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | verified |
People
(Reporter: mstange, Assigned: mstange)
References
Details
(Whiteboard: [proton-context-menus] [priority:2c])
Attachments
(1 file)
Steps to reproduce:
- In a fresh profile, open the Bookmarks menubar menu.
- Go to the "Firefox Nightly Resources" folder.
- Move your mouse over the bookmarks in that folder, and watch the target URL being displayed in the bottom left corner of the browser window.
- Move your mouse outside of the submenu.
- Click outside the menu to dismiss it.
Expected results:
When the mouse leaves the bookmark menu items, the URL should disappear.
Actual results:
The URL of the last-hovered item remains, even after the menu has been dismissed.
This is because the native menu code only fires DOMMenuItemActive events but no DOMMenuItemInactive events.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Priority: -- → P2
Whiteboard: [proton-context-menus] [priority:2c]
Updated•5 years ago
|
See Also: → https://jira.mozilla.com/browse/FIDEFE-1121
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/d5390c04b7ba
Correctly send DOMMenuItemInactive events when the highlighted menu item in a native menu changes. r=harry
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Comment 4•5 years ago
|
||
Reproduced the initial issue using old Nightly 2021-04-08, verified that this is fixed using latest Nightly 89.0a1 on macOS 11.3.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•