Bug 1703930 - Correctly send DOMMenuItemInactive events when the highlighted menu item in a native menu changes. r=harry

Differential Revision: https://phabricator.services.mozilla.com/D111329